No longer breaks at md point. Next is brushing up and animations. Then more of the optional requirements. React tweets?

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,11 +18,9 @@ html,
 }
 
 @media (max-width: 768px) {
-  .hero-image {
-    object-position: center center;
-  }
-
   .slant-section {
+    width: 100%;
+    max-width: 100%;
     clip-path: none;
     -webkit-clip-path: none;
   }
